crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_boards_40x20.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board ● 1 running              "
"  [ Global ▾ ]   [ Act ] [ All ] [ Arc ]"
"[ ‹ ] [ Todo (M) · 1/6 · 1 cards ] [ › ]"
"────────────────────────────────────────"
"┌ Boards ────────────────────────[ X ]─┐"
"│ Global                               │"
"│ project — /Volumes/archive/project   │"
"│ project — /work/alpha/project        │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] "
"[ + Column ]  [ Edit col ]  [ Del col ] "
"[ Move col ]  [ Template ]  [ ? Help ]  "
