crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_boards_52x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"┌ Boards ──────────────────────────────────────[×]─┐"
"│ Global                                           │"
"│ project — /Volumes/archive/project               │"
"│ project — /work/alpha/project                    │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"└──────────────────────────────────────────────────┘"
"? help                                              "
