crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_boards_60x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐"
"│┌──────────────────────────┐││┌──────────────────────────┐│"
"││· #1 Update docs──────────││││▶ #2 Add retry to MELI sc…││"
"││· idle                    ││││▶ running · 2m0s          ││"
"││claude┌ Boards (Enter switch · Esc back) ─[Back]─┐elete]││"
"│└──────│ Global                                   │──────┘│"
"│       │ project — /Volumes/archive/project       │       │"
"│       │ project — /work/alpha/project            │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       └──────────────────────────────────────────┘       │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘"
"? help                                                      "
