crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_boards_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board ● 1 running     [ Global ▾ ]      [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ──────┐┌ PLAN · AUTO · 1 ────────┐┌ EXECUTE · AUTO · 2 ────┐"
"│┌───────────────────────┐││┌───────────────────────┐││┌──────────────────────┐│"
"││#1 Update docs         ││││#2 Add retry to MELI s…││││#3 Fix flaky test     ││"
"││· idle          ┌ Boards (Enter switch · Esc back)[ Back ]─┐ed              ││"
"││claude          │ Global                                   │                ││"
"│└────────────────│ project — /Volumes/archive/project       │────────────────┘│"
"│                 │ project — /work/alpha/project            │────────────────┐│"
"│                 │                                          │estigate crash  ││"
"│                 │                                          │ked             ││"
"│                 │                                          │                ││"
"│                 │                                          │────────────────┘│"
"│                 │                                          │                 │"
"│                 │                                          │                 │"
"│                 │                                          │                 │"
"│                 │                                          │                 │"
"│                 │                                          │                 │"
"│                 └──────────────────────────────────────────┘                 │"
"│                         ││                         ││                        │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
