crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_columns_120x35.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board ● 1 running                         [ Global ▾ ]                          [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"│┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐│"
"││#1 Update docs            ││││#2 Add retry to MELI scra…││││#3 Fix flaky test         ││││#5 Refactor auth module   ││"
"││· idle                    ││││▶ running · 2m0s          ││││⧗ queued                  ││││✗ failed                  ││"
"││claude                    ││││claude · eff: high        ││││claude                    ││││claude · eff: medium      ││"
"│└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘│"
"│                            ││                            ││┌──────────────────────────┐││┌──────────────────────────┐│"
"│                            ││                            │││#4 Investigate crash      ││││#6 Tune retry backoff     ││"
"│                            ││                            │││⏸ blocked                 ││││? awaiting                ││"
"│                            ││       ┌ Columns (j/k move · Enter open · Es[ X ]s┐      ││││claude                    ││"
"│                            ││       │ Todo  1                                  │──────┘││└──────────────────────────┘│"
"│                            ││       │ Plan  1                                  │       ││                            │"
"│                            ││       │ Execute  2                               │       ││                            │"
"│                            ││       │ Review  2                                │       ││                            │"
"│                            ││       │ Human Review  0                          │       ││                            │"
"│                            ││       │ Done  2                                  │       ││                            │"
"│                            ││       │ ⇄  Switch board  →                       │       ││                            │"
"│                            ││       │ ⊞  Apply template                        │       ││                            │"
"│                            ││       │                                          │       ││                            │"
"│                            ││       │                                          │       ││                            │"
"│                            ││       │                                          │       ││                            │"
"│                            ││       │                                          │       ││                            │"
"│                            ││       └──────────────────────────────────────────┘       ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
