crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_columns_52x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board          [ Board: Global ▾ ]         "
"            Visible: [ Active ] [ All ] [ Archived ]"
"[ ‹ ]      [ Todo · 1/6 · 1 cards · ▶1 ]       [ › ]"
"────────────────────────────────────────────────────"
"┌ Columns ───────────────────────────────────[ X ]─┐"
"│ Todo  1                                          │"
"│ Plan  1                                          │"
"│ Execute  2                                       │"
"│ Review  2                                        │"
"│ Human Review  0                                  │"
"│ Done  2                                          │"
"│ ⇄  Switch board  →                               │"
"│ ⊞  Apply template                                │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"│                                                  │"
"└──────────────────────────────────────────────────┘"
" [ + New card ]    [ Open card ]   [ Archive card ] "
"[ + New column ]  [ Edit column ]  [ Delete column ]"
" [ Move column ]    [ Template ]      [ ? Help ]    "
"? help                                              "
