crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_columns_60x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
"┌ Todo · 1 · manual ─────────┐┌ Plan · 1 · auto ───────────┐"
"│▌ Update docs               ││▌ Add retry to MELI scraper │"
"│  · idle · claude           ││  ▶ running · 2m0s · claude/│"
"│                            ││                            │"
"│       ┌ Columns (j/k move · Enter open · Esc clos┐       │"
"│       │ Todo  1                                  │       │"
"│       │ Plan  1                                  │       │"
"│       │ Execute  2                               │       │"
"│       │ Review  2                                │       │"
"│       │ Human Review  0                          │       │"
"│       │ Done  2                                  │       │"
"│       │ ⇄  Switch board  →                       │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       │                                          │       │"
"│       └──────────────────────────────────────────┘       │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"│                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘"
"? help                                                      "
