crates/board-tui/tests/snapshots/snapshots__size_matrix_switcher_columns_and_boards__switcher_columns_80x24.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render_sized(&mut d, w, h)"
---
" ◈ herdr-board                                                      ● 1 running "
"          [ Board: Global ▾ ]           Visible: [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ──────┐┌ PLAN · AUTO · 1 ────────┐┌ EXECUTE · AUTO · 2 ────┐"
"│┌───────────────────────┐││┌───────────────────────┐││┌──────────────────────┐│"
"││#1 Update docs  ┌ Columns (j/k move · Enter open [ Close ]s┐ flaky test     ││"
"││· idle          │ Todo  1                                  │ed              ││"
"││claude          │ Plan  1                                  │                ││"
"│└────────────────│ Execute  2                               │────────────────┘│"
"│                 │ Review  2                                │────────────────┐│"
"│                 │ Human Review  0                          │estigate crash  ││"
"│                 │ Done  2                                  │ked             ││"
"│                 │ ⇄  Switch board  →                       │                ││"
"│                 │ ⊞  Apply template                        │────────────────┘│"
"│                 │                                          │                 │"
"│                 │                                          │                 │"
"│                 │                                          │                 │"
"│                 │                                          │                 │"
"│                 └──────────────────────────────────────────┘                 │"
"│                         ││                         ││                        │"
"└─────────────────────────┘└─────────────────────────┘└────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
"? help                                                                          "
